# localgpt

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  config.example.toml  docker-compose.yml
apps/android/LocalGPTApp/src/main/java/com/localgpt/app/: MainActivity.kt  WorkspaceViewModel.kt
apps/apple/: README.md
apps/apple/scripts/: build_apple.sh
apps/ios/LocalGPT/: LocalGPTApp.swift
apps/ios/LocalGPT/ViewModels/: WorkspaceViewModel.swift
apps/ios/LocalGPT/Views/: FileEditorView.swift  WorkspaceEditorView.swift
apps/web/: .gitignore  README.md
apps/web/client/: index.html  package.json
apps/web/client/src/: App.css  App.tsx  index.css
apps/web/client/src/components/: Chat.css  Chat.tsx  PlayerList.css  PlayerList.tsx  World3D.tsx
apps/web/client/src/hooks/: useSpacetime.ts
apps/web/server/: Cargo.toml
apps/web/server/src/: lib.rs
bridges/cli/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli-tools/: Cargo.toml
crates/cli-tools/src/: lib.rs
crates/cli/src/: main.rs
crates/cli/src/cli/: ask.rs  bridge.rs  chat.rs  completion.rs  cron.rs  daemon.rs  doctor.rs  gen3d.rs  hooks.rs  mod.rs  tui.rs
crates/cli/src/desktop/: worker.rs
crates/core/: Cargo.toml
crates/core/src/: env.rs
crates/core/src/agent/: mod.rs  providers.rs  skills.rs
crates/core/src/agent/tools/: mod.rs
crates/core/src/config/: mod.rs
crates/core/src/mcp/: server.rs
crates/core/src/media/: audio.rs  document.rs  mod.rs  tts.rs
crates/core/src/memory/: mod.rs  search.rs
crates/core/src/security/: protected_files.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/src/: lib.rs
crates/server/src/: http.rs  lib.rs
crates/server/src/security/: bridge.rs  mod.rs
crates/spacetime/: Cargo.toml
crates/spacetime/src/: lib.rs
crates/world-types/: Cargo.toml
crates/world-types/src/: asset.rs  audio.rs  avatar.rs  behavior.rs  creation.rs  entity.rs  history.rs  identity.rs  lib.rs  light.rs  material.rs  shape.rs  spatial.rs  tour.rs  validation.rs  world.rs
docs/: architecture.md
website/: docusaurus.config.ts  sidebars.ts
website/blog/: 2026-03-07-explorable-worlds-mcp.md  2026-03-07-localgpt-gen-as-mcp-server.md  2026-03-07-world-as-skill.md
website/docs/: architecture.md  claw.md  cli-commands.md  configuration.md  ecosystem.md  memory-system.md  quick-start.md  worlds.md
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.tsx
