[package]
name = "localgpt-spacetime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Keep this package independent from the main workspace
[workspace]

[dependencies]
spacetimedb = { version = "2.0", features = ["rand"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Reuse shared world types
localgpt-world-types = { path = "../world-types" }
