[package]
name = "localgpt-world-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified world data model for LocalGPT Gen — serde-only, no Bevy/SpacetimeDB"
keywords = ["localgpt", "world", "3d", "types"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
ron = "0.9"
